Work around WebKit layout issue in GUI connection overlay
The "Advanced options" toggle is wrapped into two lines and only fills
the entire width after it is focused for the first time. Disable word
wrapping to work around this.

--- a/cmd/gui/res/style.css
+++ b/cmd/gui/res/style.css
@@ -111,6 +111,7 @@ header a.disabled {
 #overlay-connect fieldset legend {
 	display: block;
 	width: 100%;
+	white-space: nowrap;
 	box-sizing: border-box;
 	padding: 0 0 0 1em;
 	margin: 0 0 .75em 0;
